# cendra-platform

./: .dockerignore  .fork-base-sha  .gcloudignore  CLAUDE.md  FORK_LEDGER.md  Makefile  PORTING_MAP.md
reference/brain_engine/: .coveragerc  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PROVENANCE.md  README.md  azure-pipelines.yml  conftest.py  docker-compose.observability.yml  nginx.conf  proof_bootstrap_async_single.py  proof_bootstrap_unbounded.py  proof_property_agnostic.py  pyproject.toml  requirements.txt
reference/brain_engine/api_server/: __init__.py  middleware.py  reservation_merger.py  schemas.py  server.py
reference/brain_engine/brain_engine/: __init__.py  agent.py  exceptions.py  problem_solver.py  protocols.py
reference/brain_engine/config/: .env.example  __init__.py  call_scripts.yaml  cleaners.json  demo_guests.json  guests.json  properties.json  settings.py  vendors.json
reference/brain_engine/deploy/: POSTGRES_SETUP.md  bootstrap-worker-deployment.yaml  bootstrap-worker-scaledjob.yaml  brain-engine-dev.yaml  brain-engine-prod.yaml  freshness-consumer-deployment.yaml  freshness-sweep-cronjob.yaml  memory-smoke-job.yaml  postgres-cluster.yaml  postgres-migrations.yaml  qdrant.yaml
reference/brain_engine/internet-drafts/: README.md
reference/brain_engine/kubernetes/: brain-engine.yaml
reference/brain_engine/patents/: IMPLEMENTATION_MAP.md  PATENT_CLAIMS.md  README.md
reference/brain_engine/scripts/: archive_stale_cases.py  backfill_temporal_features.py  backfill_tenant_registry.py  cleanup_blacklisted_rules.py  cleanup_legacy_no_rationale.py  cleanup_property_data.py  coverage_gates.sh  enqueue_bootstrap_intent.py  peek_service_bus.py
reference/brain_engine/tests/: _builders.py  test_agent_request_timeout.py  test_agui_service_wiring.py  test_analysis_orchestrator.py  test_auto_bootstrap_intent_path.py  test_auto_bootstrap_middleware_integration.py  test_auto_bootstrap_trigger.py  test_backfill_smoke.py  test_backfill_temporal_features.py  test_base_chat_model_profile.py  test_bootstrap_dispatcher_selection.py  test_bootstrap_event_bus.py  test_bootstrap_extractor_wiring.py  test_bootstrap_intent.py  test_bootstrap_job_store.py  test_bootstrap_memory_inject.py  test_bootstrap_memory_wiring.py  test_bootstrap_message.py  test_bootstrap_message_handler.py  test_bootstrap_message_selection.py  test_bootstrap_none_defaults.py  test_bootstrap_pipeline_observability.py  test_bootstrap_pipeline_tenant_override.py  test_bootstrap_pipeline_validator_gate.py  test_bootstrap_reaper.py  test_bootstrap_runner.py  test_bootstrap_temporal_analysis.py  test_bootstrap_unbounded_ingestion.py  test_bootstrap_upsert_registry.py  test_bootstrap_voice_processor.py  test_bootstrap_worker_loop.py  test_business_classifier_phase5_wiring.py  test_c8_2_provenance_snapshot.py  test_capacity_sanity_block.py  test_case_archiver.py  test_case_origin_bridge.py  test_case_outcome_from_decision_type.py  test_cases_filter_by_source_event.py  test_classifier_llm_hint.py  test_cleaning_fee_none_vs_zero.py  (+139 more)
reference/brain_engine/tools/: .env.example  brain_engine_showcase.py  memory_monitor.py  mumi-feedback-postman.json  mumi-foundation-verification-postman.json  mumi-onboarding-audit-postman.json  mumi-onboarding-full-flow-postman.json  requirements-seeder.txt  seed_fake_conversations.py
reference/brain_engine/workers/: __init__.py  _bootstrap_collaborators.py  bootstrap_deps.py  bootstrap_message_handler.py  bootstrap_worker.py  freshness_consumer.py  freshness_deps.py  (+2 more)
(+1216 files in other folders)
